# japi_project_create

./: .gitignore  README.md  japi_project_create.py  japi_project_create.spec
resources/cpp/: CMakeLists.txt
resources/cpp/src/: main.cpp  main.h
templates/: build.py  itemplate.py
templates/impl/: cpp_template.py
